fix[body-overflow:hidden]

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,8 +31,6 @@ html, body, main {
  width: 100%;
 }
 
-
-
 .top {
  height: 100%;
 }
@@ -193,8 +191,13 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
 }
 
 @media (max-width: 575.98px) {
+ 
+ body {
+  overflow:hidden;
+ }
+ 
  main {
-  padding-bottom: 30px;
+  padding-bottom: 45px;
  }
 
  footer {
